Bug #1949
closedcrash during reguid causes stale config
0%
Description
If the machine crashes during a spa reguid operation after the new guid has been synced to all labels, but before the cached config has been updated then the next time the pool is opened the stale config will cause vdev_validate() to think the labels on the vdevs are corrupt (wrong guid).
Updated by Albert Lee over 10 years ago
- Project changed from site to illumos gate
Updated by Eric Schrock over 10 years ago
- Status changed from New to Resolved
changeset: 13573:72c96cded60f
tag: tip
user: George Wilson <george.wilson@delphix.com>
date: Mon Jan 23 19:08:40 2012 -0800
description:
1949 crash during reguid causes stale config
1953 allow and unallow missing from zpool history since removal of pyzfs
1955 sderr kstat should expand when a LUN is expanded
Reviewed by: Adam Leventhal <ahl@delphix.com>
Reviewed by: Matt Ahrens <matt@delphix.com>
Reviewed by: Eric Schrock <eric.schrock@delphix.com>
Reviewed by: Bill Pijewski <wdp@joyent.com>
Reviewed by: Richard Lowe <richlowe@richlowe.net>
Reviewed by: Garrett D'Amore <garrett.damore@gmail.com>
Reviewed by: Dan McDonald <danmcd@nexenta.com>
Reviewed by: Steve Gonczi <gonczi@comcast.net>
Approved by: Eric Schrock <eric.schrock@delphix.com>
modified:
usr/src/lib/libzfs/common/libzfs_dataset.c
usr/src/uts/common/fs/zfs/spa.c
usr/src/uts/common/fs/zfs/sys/vdev.h
usr/src/uts/common/fs/zfs/vdev.c
usr/src/uts/common/io/scsi/targets/sd.c